@@ -277,7 +277,12 @@ remove_city_improvement_limit = true
 
 ; If set to a number > 0, prevents units from moving onto tiles that already have at least that many units on them. Set to false or a number <= 0 to
 ; return to the standard game rule of unlimited units per tile.
+; By default, cities are excluded from this limit but you can change that by toggling the option below.
 limit_units_per_tile = false
+
+; Allows an unlimited number of units to occupy tiles with cities when limit_units_per_tile is set > 0. If that option is set to false or <= 0, this
+; one does nothing.
+exclude_cities_from_units_per_tile_limit = true
 
 ; Be warned: the no era limit feature is incomplete, untested, and not likely to work at this time
 remove_era_limit = false
