@@ -1,3 +1,5 @@
+- Option to exclude cities from the unit stack limit
+
 - Allow perfume amounts to be specified as percentages
 - Option to limit how many units can share each tile, named limit_units_per_tile
 - Adjustable chance for max one HP units to be destroyed by nuclear strikes
